--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
+
         android:allowBackup="true"
+        android:appComponentFactory="whateverString"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".NYTimesApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:appComponentFactory"
-        android:appComponentFactory="whateverString">
+        tools:replace="android:appComponentFactory">
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name"
@@ -26,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".NyMainActivity" />
-        <activity android:name=".view.BookWebViewActivity"></activity>
+        <activity android:name=".view.BookWebViewActivity" />
     </application>
 
 </manifest>
